# merge_to_master

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: backup.rs  clean_deletions.rs  clean_duplicates.rs  lib.rs  logging.rs  main.rs  merge_objects.rs  merge_plugins.rs  plugin_data.rs  remap_masters.rs  remap_textures.rs  traits.rs  types.rs
src/traits/: count_objects.rs  extensions.rs  into_objects.rs  merge_objects.rs  remap_masters.rs  remap_textures.rs  remove_deleted.rs  remove_ignored.rs
src/types/: cells.rs  dialogue.rs  objects.rs  plugin.rs
tests/: integration_tests.rs
tests/assets/info_delete_end/: Expect.esm  Master.esm  Plugin.esp
tests/assets/info_delete_front/: Expect.esm  Plugin.esp
tests/assets/info_delete_middle/: Expect.esm  Plugin.esp
tests/assets/info_delete_middle_2/: Expect.esm  Master.esm  Plugin.esp
tests/assets/info_insert_empty/: Expect.esm  Master.esm  Plugin.esp
tests/assets/info_insert_end/: Expect.esm  Plugin.esp
tests/assets/info_insert_front/: Expect.esm  Plugin.esp
tests/assets/info_insert_middle/: Expect.esm  Plugin.esp
tests/assets/info_insert_replacing/: Expect.esm  Master.esm  Plugin.esp
tests/assets/info_preserve_gaps/: Base.esm  Expect.esm  Master.esm  Plugin.esp
tests/assets/merge_references_1/: Expect.esm  Master.esm  Plugin.esp
tests/assets/remap_textures/: Expect.esm  Master.esm  Plugin.esp
tests/assets/remove_deleted/: Expect.esm  Master.esm  Plugin.esp
tests/assets/remove_deleted_fields/: Base.esm  Expect.esm  Master.esm  Plugin.esp
tests/assets/remove_deleted_references/: Base.esm  Expect.esm  Master.esm  Plugin.esp
tests/assets/rename_cells/: Expect.esm  Master.esm  Plugin.esp
