[package]
name = "merge_to_master"
version = "0.9.3"
authors = ["Greatness7"]
description = "Merge the contents of a plugin into a master."
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["cargo"] }
easy-ext = "^1.0"
hashbrown = { version = "^0.14", features = ["nightly", "rayon"] }
itertools = "^0.13"
lending-iterator = "^0.1"
mimalloc = { version = "^0.1", default-features = false }
path-slash = "^0.2"
rayon = "^1.10"
log = { version = "^0.4", features = ["release_max_level_off"] }
tracing = { version = "^0.1", features = ["release_max_level_info"] }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "dev"
# path = "../tes3"
default-features = false
features = ["esp", "nightly"]

[dev-dependencies]
rkyv = "^0.7"
serde = "^1.0"
serde_json = "^1.0"

[lints.rust]
future_incompatible = "warn"
keyword_idents = "warn"
let_underscore = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Lint Overrides
cargo_common_metadata = "allow"
enum_glob_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
use_self = "allow"
wildcard_imports = "allow"
