[package]
name = "merge_to_master"
version = "0.9.16"
authors = ["Greatness7"]
description = "Merge the contents of a plugin into a master."
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["cargo"] }
easy-ext = "^1.0"
hashbrown = { version = "^0.15", features = ["nightly", "rayon"] }
itertools = "^0.14"
lending-iterator = "^0.1"
path-slash = "^0.2"
rayon = "^1.10"
log = { version = "^0.4", features = ["release_max_level_off"] }
tracing = { version = "^0.1", features = ["release_max_level_info"] }
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
glam = "^0.29"
uncased = "^0.9"
bitflags = "^2.9"

[dependencies.mimalloc]
git = "https://github.com/purpleprotocol/mimalloc_rust.git"
rev = "eff21096d5ee5337ec89e2b7174f1bbb11026c70"
default-features = false

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
rev = "51fae82b79838d76a39d0d1d0d472d7f48e8577f"
# path = "../tes3"
default-features = false
features = ["esp", "nightly"]

[dev-dependencies]
rkyv = "^0.7"
serde = "^1.0"
serde_json = "^1.0"

[lints.rust]
future_incompatible = "warn"
keyword_idents = "warn"
nonstandard_style = "warn"
refining_impl_trait = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow"
len_without_is_empty = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
use_self = "allow"
wildcard_imports = "allow"
